application identification by [vendor,name]

--- a/src/Inceptum.AppServer.Management/Content/js/templates/application.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/application.html
@@ -23,7 +23,7 @@
     <h3>
         <%= model.Name %>
         <span class="pull-right">
-            <a href="#/applications/<%=model.Name%>/instances/create"  class="btn btn-mini" type="button">Create instance</a>
+            <a href="#/applications/<%= model.Vendor %>/<%= model.Name %>/instances/create"  class="btn btn-mini" type="button">Create instance</a>
         </span>
     </h3>
 </div>
