--- a/src/Inceptum.AppServer.Management/Content/js/templates/instance.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instance.html
@@ -3,7 +3,7 @@
             <dt>Name</dt>
             <dd><%= model.Name %></dd>
             <dt>Application</dt>
-            <dd><a href="#/applications/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></a></dd>
+            <dd><a href="#/applications/<%=model.ApplicationVendor%>-<%=model.ApplicationId%>"><%=model.ApplicationVendor%>(c) <%=model.ApplicationId%></a></a></dd>
             <dt>Version</dt>
             <dd><%= model.Version %></dd>
             <dt>Environment</dt>
