--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -2,10 +2,9 @@
     <thead>
     <th>Name</th>
     <th>Application</th>
-    <th>Version</th>
+    <th  width="200px">Version</th>
     <th width="80px">Status</th>
-    <th width="60px"></th>
-    <th width="100px"></th>
+    <th width=""></th>
     </thead>
     <tbody>
 
