fluid layout and extended sidebar width

--- a/src/Inceptum.AppServer.Management/Content/js/templates/appsSideBar.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/appsSideBar.html
@@ -6,7 +6,7 @@
         }
         .appsMenu a span{
             word-wrap: break-word;
-            width: 170px;
+            /*width: 170px;*/
             display: inline-block;
         }
     </style>
