--- a/src/Inceptum.AppServer.Management/Content/js/templates/serverStatus.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/serverStatus.html
@@ -1,9 +1,5 @@
-<div class="row">
-    <div class="span3 sidebar">
-    </div>
 
-
-    <div class="span9" id="serverArea">
+    <div  id="serverArea">
 
         <dl>
             <dt>Machine Name</dt>
@@ -15,4 +11,3 @@
             </dd>
         </dl>
     </div>
-</div>
