--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -4,7 +4,7 @@
     <th>Application</th>
     <th  width="200px">Version</th>
     <th width="80px">Status</th>
-    <th width=""></th>
+    <th width="150px"></th>
     </thead>
     <tbody>
 
