--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
@@ -1,6 +1,6 @@
 
     <td><a href="#/instances/<%=model.Name%>"><%=model.Name%></a></td>
-    <td><a href="#/applications/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></td>
+    <td><a href="#/applications/<%=model.ApplicationVendor%>/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></td>
     <td><%=model.Version%><%if(!model.Version || model.Version==""){%><%=model.ActualVersion%> (latest) <%}%></td>
     <td><span class="label label-<%if(model.Status=="Starting"){%>warning<%}%><%if(model.Status=="Stopping"){%>inverse<%}%><%if(model.Status=="Started"){%>success<%}%>"><%=model.Status%></span></td>
     <td>
