--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
@@ -37,6 +37,20 @@
         </div>
     </div>
 
+    <div class="control-group">
+        <label class="control-label" for="User">User</label>
+        <div class="controls">
+            <input type="text" id="User" name="User" placeholder="Use AppServer user" value="<%=model.User%>">
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="Password">Password</label>
+        <div class="controls">
+            <input type="password" id="Password" name="Password" placeholder="Password" value="<%=model.Password%>">
+        </div>
+    </div>
+
 <!--    <div class="control-group">
         <label class="control-label" for="inputAutostart">Start on server startup </label>
         <div class="controls">
