UI: configuration tree moved to sidebar

--- a/src/Inceptum.AppServer.Management/Content/js/templates/configuration/treeNode.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/configuration/treeNode.html
@@ -1,4 +1,4 @@
-<div>
+<div  style="height:24px;">
     <span>
     <%if(model.isFolder){%>
         <a href="#" data-toggle="collapse" data-target="#<%= model.uiid%>"><i class="<%=model.imgClass%>"></i></a>
