--- a/src/Inceptum.AppServer.Management/Content/js/templates/configuration/configurationsSideBar.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/configuration/configurationsSideBar.html
@@ -1,3 +1,10 @@
+<style>
+    a.bundleName.active{
+        font-weight: bold;
+    }
+
+</style>
+
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Configurations</li>
