server instance name on navbar

--- a/src/Inceptum.AppServer.Management/Content/js/templates/serverStatus.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/serverStatus.html
@@ -4,6 +4,8 @@
         <dl>
             <dt>Machine Name</dt>
             <dd><%=model.MachineName%>&nbsp;</dd>
+            <dt>AppServer Instance Name</dt>
+            <dd><%=model.Name%>&nbsp;</dd>
             <dt>Mode</dt>
             <dd>Standalone</dd>
             <dt>Application instances</dt>
