--- a/src/Inceptum.AppServer.Management/Content/js/templates/header.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/header.html
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand">Inceptum.AppServer</a>
+            <a class="brand">Inceptum.AppServer v<%= model.Version %></a>
+
+
             <div class="nav-collapse">
                 <ul class="nav topMenu">
                     <li class="server"><a href="#"><i class="icon-home icon-white"></i> Server</a></li>
@@ -26,7 +28,7 @@
         </div>
     </div>
     <div style="position: absolute;top:5px;right:5px">
-        <%= model.Version %>
+        <span class="label label-info"><%= model.Name %></span>
     </div>
 
 </div>
