instance restart button

--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
@@ -18,9 +18,9 @@
             </ul>
             </div>
         <%}%>
-            <button class="btn btn-mini start" disabled="disabled" data-action="start">Start</button>
-            <button class="btn btn-mini stop" disabled="disabled" data-action="stop">Stop</button>
-            <button class="btn btn-mini btn-danger delete" disabled="disabled"  data-action="delete">Delete</button>
-
+            <a class="btn btn-mini cmd start" title="Start"><i class="icon-play"></i></a>
+            <a class="btn btn-mini cmd stop" title="Stop"><i class="icon-stop"></i></a>
+            <a class="btn btn-mini cmd restart" title="Restart"><i class="icon-refresh"></i></a>
+            <a class="btn btn-mini cmd btn-danger delete" title="Delete"><i class="icon-trash"></i></a>
         </div>
     </td>
