--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -4,9 +4,9 @@
     <th>Name</th>
     <th>Application</th>
     <th  width="200px">Version</th>
-    <th  width="200px">User</th>
-    <th width="80px">Status</th>
-    <th width="150px"></th>
+    <th  width="150px;">User</th>
+    <th width="10px">Status</th>
+    <th width="10px"></th>
     </thead>
     <tbody>
 
