--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
@@ -3,7 +3,7 @@
     <td><a href="#/instances/<%=model.Name%>"><%=model.Name%></a></td>
     <td><a href="#/applications/<%=model.ApplicationVendor%>/<%=model.ApplicationId%>"><%=model.ApplicationId%></a></td>
     <td><%=model.Version%><%if(!model.Version || model.Version==""){%><%=model.ActualVersion%> (latest) <%}%></td>
-    <td><%if(model.User!=''){%><%=model.User%><%}else{%><span style="color:grey">Same as server</span><%}%></td>
+    <td><%if(model.EffectiveUser!=''){%><%=model.EffectiveUser%><%}else{%><span style="color:grey">Same as server</span><%}%></td>
     <td><span class="label label-<%if(model.Status=="Starting"){%>warning<%}%><%if(model.Status=="Stopping"){%>inverse<%}%><%if(model.Status=="Started"){%>success<%}%>"><%=model.Status%></span></td>
     <td>
         <div class="btn-group actions pull-right">
