--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
@@ -38,6 +38,16 @@
     </div>
 
     <div class="control-group">
+        <label class="control-label" for="DefaultConfiguration">DefaultConfiguration</label>
+        <div class="controls">
+            <select id="DefaultConfiguration" name="DefaultConfiguration" value="<%=model.DefaultConfiguration%>">>
+                <option value=""></option>
+            </select> 
+        </div>
+    </div>
+
+
+    <div class="control-group">
         <label class="control-label" for="User">User</label>
         <div class="controls">
             <input type="text" id="User" name="User" placeholder="Use AppServer user" value="<%=model.User%>">
