--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceEdit.html
@@ -63,7 +63,7 @@
     
     
     <div class="control-group">
-        <label class="control-label" for="MaxLogSize">Maximum dayly log size in bytes (0 for unlimited)</label>
+        <label class="control-label" for="MaxLogSize">Maximum daily log size in bytes (0 for unlimited)</label>
         <div class="controls">
             <input type="text" id="MaxLogSize" name="MaxLogSize" placeholder="Maximum log size" value="<%=model.MaxLogSize%>">
         </div>
