filter on instances list

--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -1,6 +1,10 @@
+<div class="well well-small span3">
+    <b>Filter:</b> <input class ="span10" id="nameFilter"/>
+</div>
+
 <table class="table table-striped table-condensed table-bordered instances">
     <thead>
-    <th width="80px">Environment</th>
+        <th width="80px">Environment</th>
     <th>Name</th>
     <th>Application</th>
     <th  width="200px">Version</th>
