--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -1,18 +1,22 @@
+<div class="row">
 <div class="well well-small span3">
-    <b>Filter:</b> <input class ="span10" id="nameFilter"/>
+    <input class ="span12" id="nameFilter" placeholder="Filter"/>
 </div>
+</div>
+<div class="row">
 
 <table class="table table-striped table-condensed table-bordered instances">
     <thead>
         <th width="80px">Environment</th>
-    <th>Name</th>
-    <th>Application</th>
-    <th  width="200px">Version</th>
-    <th  width="150px;">User</th>
-    <th width="10px">Status</th>
-    <th width="10px"></th>
+        <th>Name</th>
+        <th>Application</th>
+        <th  width="200px">Version</th>
+        <th  width="150px;">User</th>
+        <th width="10px">Status</th>
+        <th width="10px"></th>
     </thead>
     <tbody>
 
     </tbody>
 </table>
+    </div>
