--- a/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instancesList.html
@@ -7,13 +7,19 @@
 
 <table class="table table-striped table-condensed table-bordered instances">
     <thead>
-        <th width="80px">Environment</th>
-        <th>Name</th>
-        <th>Application</th>
-        <th  width="200px">Version</th>
-        <th  width="150px;">User</th>
-        <th width="10px">Status</th>
-        <th width="10px"></th>
+        <tr>
+            <th rowspan="2" width="80px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Environment</th>
+            <th rowspan="2" style="min-width: 200px;text-align: center;vertical-align: middle;">Name</th>
+            <th rowspan="2" style="text-align: center;vertical-align: middle;">Application</th>
+            <th colspan="2" style="text-align: center;vertical-align: middle;">Version</th>
+            <th rowspan="2" width="150px" style="white-space: nowrap;text-align: center;vertical-align: middle;">User</th>
+            <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Status</th>
+            <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;"></th>
+        </tr>
+        <tr>
+            <th  width="200px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Running</th>
+            <th  width="200px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Configured</th>
+        </tr>
     </thead>
     <tbody>
 
