fix debug button hint

--- a/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/instanceRow.html
@@ -24,7 +24,7 @@
             <a class="btn btn-mini" title="Configuration" href="#configurations/<%= model.DefaultConfiguration %>"><i class="icon-cog"></i></a>
         <%}%>
         <% if(model.IsDebuggable) {%>
-            <a class="btn btn-mini cmd debug" title="Start"><i class="icon-random"></i></a>
+            <a class="btn btn-mini cmd debug" title="Debug"><i class="icon-random"></i></a>
         <%}%>
             <a class="btn btn-mini cmd start" title="Start"><i class="icon-play"></i></a>
             <a class="btn btn-mini cmd stop" title="Stop"><i class="icon-stop"></i></a>
