--- a/src/Inceptum.AppServer.Management/Content/js/templates/header.html
+++ b/src/Inceptum.AppServer.Management/Content/js/templates/header.html
@@ -1,7 +1,7 @@
 <!--
 <div class="navbar navbar-fixed-top">
 -->
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top" style="-webkit-transform: translateZ(0); ">
     <div class="navbar-inner">
         <div class="container">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
