instance command emitteing from ui fixed

--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/commandPopup.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/commandPopup.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
     <form class="form-horizontal">
-        <% _.each(Parameters, function(p) { %>
+        <% _.each(parameters, function(p) { %>
         <div class="control-group">
             <label class="control-label" for="<%=p.name%>"><%=p.name%></label>
             <div class="controls">
