--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/instanceRow.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/instanceRow.html
@@ -6,6 +6,7 @@
     <td style="white-space: nowrap"><%=model.version%><%if(!model.version || model.version==""){%>latest<%}%></td>
     <td style="white-space: nowrap"><%if(model.effectiveUser!=''){%><%=model.effectiveUser%><%}else{%><span style="color:grey">Same as server</span><%}%></td>
     <td style="white-space: nowrap"><span class="label label-<%if(model.status=="Starting"){%>warning<%}%><%if(model.status=="Stopping"){%>inverse<%}%><%if(model.status=="Started"){%>success<%}%>"><%=model.status%></span></td>
+    <td style="white-space: nowrap"><%if(!model.autoStart){%>do not start<%}else{%><%=model.startOrder%><%}%></td>
     <td style="white-space: nowrap">
         <div class="btn-group actions pull-right">
         <% if(model.commands && model.commands.length>0) {%>
