--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/instancesList.html
@@ -14,6 +14,7 @@
             <th colspan="2" style="text-align: center;vertical-align: middle;">Version</th>
             <th rowspan="2" width="150px" style="white-space: nowrap;text-align: center;vertical-align: middle;">User</th>
             <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Status</th>
+            <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Start Order</th>
             <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;"></th>
         </tr>
         <tr>
