--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/bundle.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/bundle.html
@@ -1,5 +1,5 @@
 <style>
-         .CodeMirror{
+    .CodeMirror{
             border: 1px solid #E1E1E8;
             -webkit-border-radius: 4px;
             -moz-border-radius: 4px;
@@ -7,13 +7,7 @@
             line-height: 20px;
              height:600px;
         }
-
-/*        .CodeMirror-scroll {
-            height: 600px;
-            overflow-y: hidden;
-            overflow-x: auto;
-        }
-  */
+ 
     .CodeMirror-fullscreen {
         display: block;
         position: absolute;
@@ -36,7 +30,7 @@
     #code{
         position: relative;
 
-    }
+    } 
 </style>
 
 <div class="page-header">
@@ -50,7 +44,7 @@
             <div class="btn-group">
             <a id="preview" class="btn btn-mini" title="Ctrl+P"><i class="icon-eye-open"></i> <strong>Preview</strong></a>
             <a id="fullScreen" class="btn btn-mini" title="F11"><i class="icon-fullscreen"></i> <strong>Full Screen</strong></a>
-            <a id="verify" class="btn btn-mini" title="Ctrl+F"><i class="icon-align-left"></i> <strong>Format</strong></a>
+            <a id="verify" class="btn btn-mini" title="Ctrl+Alt+F"><i class="icon-align-left"></i> <strong>Format</strong></a>
             <a id="save" class="btn btn-mini" title="Ctrl+S"><i class=" icon-ok"></i> <strong>Save</strong></a>
 <!--            <% if(model.id){%>
             <a class="btn btn-mini btn-danger"><i class="icon-trash"></i> <strong>Delete</strong></a>
