Feature:Configuration/Search: 1) fixed bootstrap.js typeahead data objects issue 2) added search.js 3) ConfigurationsController: search api

--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/bundle.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/bundle.html
@@ -41,14 +41,15 @@
             <%=model.id%>
         <% }%>
         <span class="pull-right">
+            <input id="search" class="input-large" type="text" placeholder="Search" style="height: 12px; margin-top: 10px;">
             <div class="btn-group">
-            <a id="preview" class="btn btn-mini" title="Ctrl+P"><i class="icon-eye-open"></i> <strong>Preview</strong></a>
-            <a id="fullScreen" class="btn btn-mini" title="F11"><i class="icon-fullscreen"></i> <strong>Full Screen</strong></a>
-            <a id="verify" class="btn btn-mini" title="Ctrl+Alt+F"><i class="icon-align-left"></i> <strong>Format</strong></a>
-            <a id="save" class="btn btn-mini" title="Ctrl+S"><i class=" icon-ok"></i> <strong>Save</strong></a>
-<!--            <% if(model.id){%>
-            <a class="btn btn-mini btn-danger"><i class="icon-trash"></i> <strong>Delete</strong></a>
-        <% }%>-->
+                <a id="preview" class="btn btn-mini" title="Ctrl+P"><i class="icon-eye-open"></i> <strong>Preview</strong></a>
+                <a id="fullScreen" class="btn btn-mini" title="F11"><i class="icon-fullscreen"></i> <strong>Full Screen</strong></a>
+                <a id="verify" class="btn btn-mini" title="Ctrl+Alt+F"><i class="icon-align-left"></i> <strong>Format</strong></a>
+                <a id="save" class="btn btn-mini" title="Ctrl+S"><i class=" icon-ok"></i> <strong>Save</strong></a>
+    <!--            <% if(model.id){%>
+                <a class="btn btn-mini btn-danger"><i class="icon-trash"></i> <strong>Delete</strong></a>
+            <% }%>-->
             </div>
         </span>
     </h3>
