--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/header.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/header.html
@@ -1,6 +1,3 @@
-<!--
-<div class="navbar navbar-fixed-top">
--->
 <div class="navbar navbar-fixed-top" style="-webkit-transform: translateZ(0); ">
     <div class="navbar-inner">
         <div class="container">
@@ -10,8 +7,6 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand">Inceptum.AppServer v<%= model.version %></a>
-
-
             <div class="nav-collapse">
                 <ul class="nav topMenu">
                     <li class="server"><a href="#"><i class="icon-home icon-white"></i> Server</a></li>
@@ -19,16 +14,13 @@
                     <li class="configurations"><a href="#configurations">Configuration</a></li>
                 </ul>
                 <span class="led pull-right " data-title="heartbeats" data-placement="bottom" style="margin-top:8px;"><img  src="/img/led.png"/></span>
-                <!--
-            <form class="navbar-search pull-right" action="">
-              <input type="text" class="search-query span2" placeholder="Search">
-            </form>
-            -->
+                <div class="navbar-search pull-right">
+                    <input type="text" class="search-query input-large" placeholder="Search" title="Use /re/ syntax for regexp search">
+                </div>
             </div>
         </div>
     </div>
     <div style="position: absolute;top:5px;right:5px">
         <span class="label label-info"><%= model.name %></span>
     </div>
-
 </div>
