AppServer, header.html: autocomplete == off

--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/header.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/header.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-top" style="-webkit-transform: translateZ(0); ">
+<div class="navbar navbar-fixed-top" style="-webkit-transform: translateZ(0);">
     <div class="navbar-inner">
         <div class="container">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -15,7 +15,7 @@
                 </ul>
                 <span class="led pull-right " data-title="heartbeats" data-placement="bottom" style="margin-top:8px;"><img  src="/img/led.png"/></span>
                 <div class="navbar-search pull-right">
-                    <input type="text" class="search-query input-large" placeholder="Search" title="Use /re/ syntax for regexp search">
+                    <input type="text" class="search-query input-large" placeholder="Search" title="Use /re/ syntax for regexp search" autocomplete="off">
                 </div>
             </div>
         </div>
