batch stop/start/restart buttons  on instance list

--- a/src/Inceptum.AppServer/WebApi/Content/js/templates/instancesList.html
+++ b/src/Inceptum.AppServer/WebApi/Content/js/templates/instancesList.html
@@ -14,7 +14,13 @@
                 <th rowspan="2" width="150px" style="white-space: nowrap;text-align: center;vertical-align: middle;">User</th>
                 <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Status</th>
                 <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Start Order</th>
-                <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;"></th>
+                <th rowspan="2" width="10px" style="white-space: nowrap;text-align: center;vertical-align: middle;">
+                    <div class="btn-group actions batch-buttons">
+                        <a class="btn btn-mini cmd start" title="Start"><i class="icon-play"></i></a>
+                        <a class="btn btn-mini cmd stop" title="Stop"><i class="icon-stop"></i></a>
+                        <a class="btn btn-mini cmd restart" title="Restart"><i class="icon-refresh"></i></a>
+                    </div>
+                </th>
             </tr>
             <tr>
                 <th width="200px" style="white-space: nowrap;text-align: center;vertical-align: middle;">Running</th>
